--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<p>测试-114514</p>
+<!doctype html>
+<html>
+<head>
+<meta charset="utf-8">
+<title>Index</title>
+</head>
+
+<body>
+	<p>114514</p>
+</body>
+</html>
