--- a/html/server.html
+++ b/html/server.html
@@ -7,11 +7,14 @@
 <style>
 html,body{height:100%}
 body{background:#A4D3EE}
-hr{margin-left:30px; margin-right:30px;}
+hr{margin-top:312px; margin-left:30px; margin-right:30px;}
 #container{width:960px; height:100%; overflow:hidden; margin:0 auto; background:#FFFFFF;}
-#okonano{display:block; background-image:url("https://nekorinkb.github.io/img/okonano.png"); background-size:contain; position:relative; float:left; width:312px; height:300px; z-index:99;}
-#logo{dsplay:block; position:relative; margin-top:40px;}
-#titles{display:block; position:relative; margin-right:50px; padding-bottom:5px; text-align: right; font-size:20px; color:#BAC6FF; text-shadow:1px 1px 1px #999999; line-height:36px;}
+#okonano{display:block; background-image:url("https://nekorinkb.github.io/img/okonano.png"); background-size:contain; position:absolute; width:312px; height:300px; z-index:99;}
+#logo{dsplay:block; position:absolute; margin-left:312px; margin-top:40px;}
+#titles{display:block; position:absolute; margin-left:693px; margin-top:179px; text-align:right; font-size:20px; color:#BAC6FF; text-shadow:1px 1px 1px #999999; line-height:36px;}
+#link{display:inline; margin-left:0; margin-right:0; color:#FFAA33}
+.p1{display:block; font-size:40px; color:#666666; position:relative; margin-left:60px; margin-right:60px; line-height:10px;}
+.p2{display:block; font-size:20px; color:#666666; position:relative; margin-left:60px; margin-right:60px;}
 </style>
 <body>
 <div id="container">
@@ -19,6 +22,10 @@ hr{margin-left:30px; margin-right:30px;}
 <img id="logo" src="https://nekorinkb.github.io/img/logo.png" width="608px">
 <p id="titles">Running by NekorinKB<br/>Supported by Pilyedes<br/>Powered by ICraft</p>
 <hr>
+<p class="p1">服务器说明文档</p>
+<p class="p2">这是一个由NekorinKB开设并维护，在面板上运行的Minecraft服务器。截止目前 (自有统计以来，至2020-11-28) 已经运行了八个周目，总时间超过160,000个小时。我们欢迎任何品行兼优的玩家，只要你有一定mcmod基础，亦或只是对这个游戏感兴趣，都可以随时加入我们。</p>
+<p class="p2">客户端现在要加群获取&nbsp;&nbsp;<a class="p2" id="link" href="https://jq.qq.com/?_wv=1027&k=CvWkjNjo">点击加入</a></p>
+<p class="p2">modlist和更多信息待更新...</p>
 </div>
 </body>
 </html>
